# medicare-advantage-insight-engine

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  scheduled-monitor.yml
config/: app.yaml  sources.yaml  taxonomy.yaml
docs/: architecture.md  assumptions.md  operations.md  pr-summary.md  qa-checklist.md  qa-results.md  setup.md  troubleshooting.md
scripts/: run_once.py  seed_test_data.py
src/ma_signal_monitor/: __init__.py  classify.py  config.py  dedupe.py  delivery.py  drafting.py  logging_setup.py  main.py  models.py  normalize.py  scheduler_notes.py  scoring.py  storage.py
src/ma_signal_monitor/fetchers/: __init__.py  cms.py  rss.py  sec.py
src/ma_signal_monitor/renderers/: __init__.py  generic_webhook.py  ntfy.py  teams.py
tests/: conftest.py  test_config.py  test_dedupe.py  test_delivery.py  test_normalize.py  test_renderers.py  test_scoring.py  test_storage.py
